UtahLiveDataTest/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRecordType__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalApplicant__c</fullName>
        <description>This is the applicant that is added from the external primary user.</description>
        <label>Additional Applicant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffiliatedInstitution__c</fullName>
        <description>This field saves the institution for an SME/Individual Applicants</description>
        <label>AffiliatedInstitution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantType__c</fullName>
        <formula>if (ISPICKVAL( UserRole__c ,&apos;Primary&apos;) ,&apos;AdditionalApplicant&apos;,&apos;AdditionalApplicantSecondary&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaofExpertise__c</fullName>
        <label>Area of Expertise</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactProfile__c</fullName>
        <label>Contact Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SPA</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>SPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>this field is created to save the SME reviewer contact education</description>
        <label>Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__Enable508Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To Enable 508 theme file.</inlineHelpText>
        <label>Accessibility Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAccountEditDelete__c</fullName>
        <formula>Account.HideEditDelete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAccountEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeleteOnContactsTable__c</fullName>
        <formula>NOT(ISPICKVAL(ReviewerStatus__c,&apos;New&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideDeleteOnContactsTable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideInvitationLink__c</fullName>
        <description>Hide Invitation Link</description>
        <formula>OR(ISPICKVAL(ReviewerStatus__c,&apos;Active&apos;),ISPICKVAL(ReviewerStatus__c,&apos;Invitation Sent&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hide Invitation Link</inlineHelpText>
        <label>Hide Invitation Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideInvitation__c</fullName>
        <formula>NOT(IsUser__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Invitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSendInvitationBtn__c</fullName>
        <formula>ISPICKVAL(ReviewerStatus__c,&apos;Active&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Send Invitation Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSendInvitation__c</fullName>
        <description>Formula to hide Send Invitation for External and Internal Contacts</description>
        <formula>IF(OR(AccountRecordType__c == &apos;External&apos;, AccountRecordType__c == &apos;Internal&apos;), true, false)</formula>
        <label>HideSendInvitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to specify if this contact is also a user , if the checkbox is checked then this contact is also existing as a User</description>
        <label>Is User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the check box created to identify the key primary contact for an organization</description>
        <label>KeyContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingDemographics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing Demographics</label>
        <referenceTo>USDemographicInfo__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>HYPERLINK((&apos;/&apos; + AccountId ), Account.Name ,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherDemographics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Demographics</label>
        <referenceTo>USDemographicInfo__c</referenceTo>
        <relationshipLabel>Contacts (Other Demographics)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PositionTitle__c</fullName>
        <label>Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryAreaOfExpertisePicklist__c</fullName>
        <description>This field is to save the primaryexpertise entered by the reviewer</description>
        <label>PrimaryAreaOfExpertisePicklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryAreaOfExpertise__c</fullName>
        <label>Primary Area Of Expertise</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReviewerApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the user for approving external reviewer</description>
        <label>External Reviewer Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewerStatus__c</fullName>
        <description>Status field for all types of contacts. Discussed with Shiva and have not created a new status field re using reviewerStatus__c as status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invitation Sent</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sams__c</fullName>
        <description>This is created to save the SAMS number for  individual applicants</description>
        <label>Sams Registration Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryAreaOfExpertisePicklist__c</fullName>
        <description>This field is to save the secondary expertise entered by the reviewer</description>
        <label>SecondaryAreaOfExpertisePicklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryAreaOfExpertise__c</fullName>
        <label>Secondary Area Of Expertise</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SecondaryEmail__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SecondaryFirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryLastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryPhoneNumber__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SecondaryTitle__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityToken__c</fullName>
        <label>Security Token</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SponsoringAgency__c</fullName>
        <label>Sponsoring Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCJJ</fullName>
                </value>
                <value>
                    <fullName>UOVC</fullName>
                </value>
                <value>
                    <fullName>USBE</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>I.</fullName>
                </value>
                <value>
                    <fullName>II.</fullName>
                </value>
                <value>
                    <fullName>III.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Tax Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TertiaryAreaOfExpertisePicklist__c</fullName>
        <description>This field is to save the tertiary expertise entered by the reviewer</description>
        <label>TertiaryAreaOfExpertisePicklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TertiaryAreaOfExpertise__c</fullName>
        <label>Tertiary Area Of Expertise</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UOVCContactRole__c</fullName>
        <formula>IF( ISPICKVAL( UserRole__c ,&apos;Primary&apos;) ,&apos;Primary&apos;, &apos;Secondary&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOVCContactRole</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <label>UniqueID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueIdType__c</fullName>
        <label>UniqueIdType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>User Name</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UserReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This filed will hold information of the User object to which it is referenced. A batch job will then use this field information to map its corresponding User</description>
        <label>UserReference</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserRegistered__c</fullName>
        <description>This field is used to disable the send Invitation button</description>
        <formula>IF(  ISPICKVAL(ReviewerStatus__c, &quot;Registered&quot;) , True, False)</formula>
        <label>User Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserRegistration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Registration</label>
        <referenceTo>UserRegistration__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserRoleFormula__c</fullName>
        <description>This Formula needs to be updated 

Vinayak Sharma 11/20/2015
swati singh - updated the logic 4/13/2016</description>
        <formula>IF( ISPICKVAL( UserRole__c ,&apos;Primary&apos;) ,&apos;Primary Applicant&apos;, IF(ISPICKVAL( UserRole__c ,&apos;Secondary&apos;),&apos;Secondary Applicant&apos;,&apos;External Reviewer&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRole_Recipient__c</fullName>
        <description>Old: IF( ISPICKVAL( UserRole__c ,&apos;Primary&apos;) ,&apos;LEA BA&apos;, IF(ISPICKVAL( UserRole__c ,&apos;Secondary&apos;),&apos;LEA&apos;,&apos;&apos;))</description>
        <formula>IF( ISPICKVAL( UserRole__c ,&apos;Primary&apos;) ,&apos;Approver&apos;, IF(ISPICKVAL( UserRole__c ,&apos;Secondary&apos;),&apos;Creator&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserRole_Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <description>This fields need to get updated as per the Formula Values  Vinayak 11/20/2015</description>
        <label>User Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>LEA BA</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>checkKeyPOC__c</fullName>
        <formula>$User.IsExternalUser__c=true &amp;&amp; $User.IsKeyContact__c = false</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>checkKeyPOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActiveContact__c</fullName>
        <formula>if(ISPICKVAL(ReviewerStatus__c,&apos;Active&apos;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isActiveContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isHideAccessibilityMode__c</fullName>
        <formula>IF($User.ContactId ==  Id  ||  $User.ProfileName__c == &apos;System Administrator&apos;  ,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isHideAccessibilityMode</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>AccountRecordType__c</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>Organization__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>PARENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>